--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   </header>
 
   <div class="row m-3">
-    <div id="column-left" class="col-3 p-3">
+    <div id="column-left" class="col-3">
       <form class="border-bottom border-secondary" id="search-form">
-        <label for="cityInput" class="form-label">Search for a City</label>
+        <label for="cityInput" class="fs-3 fw-bold form-label">Search for a City:</label>
         <input type="text" class="form-control" id="search-input" placeholder="San Diego">
         <button type="submit" class="btn btn-primary col-12 mt-3 mb-3">Search</button>
       </form>
