move span into h tag

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
 </head>
 
 <body>
-  <header class="d-flex flex-row justify-content-center align-items-center"id="dashboard-header">
-    <h1 class="p-3 text-center text-light">Weather Dashboard</h1>
-    <span style="font-size: 30px; color: White;"><i class="fa-solid fa-rainbow"></i></span>
-    
+  <header id="dashboard-header">
+    <h1 class="p-3 text-center text-light">Weather Dashboard <span style="font-size: 30px; color: White;"><i class="fa-solid fa-rainbow"></i></span></h1>  
   </header>
 
   <div class="row m-3">
